# exfiltrate

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT.md  NOTICE  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml
examples/: disconnected.rs  internal_only.rs  log_exfiltration.rs  logging.rs  stdio.rs  tools.rs
exfiltrate/: Cargo.toml  README.md
exfiltrate/examples/: debug.rs
exfiltrate/src/: commands.rs  lib.rs  logwise.rs  wire.rs
exfiltrate/src/commands/: help.rs  list.rs  terminate.rs
exfiltrate/src/wire/: server.rs
exfiltrate/src/wire/server/: wasm32.rs
exfiltrate_cli/: Cargo.toml  README.md
exfiltrate_cli/src/: help.rs  local_commands.rs  main.rs  wire.rs
exfiltrate_cli/src/help/: custom_commands.rs  integration.md  integration.rs
exfiltrate_cli/src/local_commands/: help.rs  list.rs  status.rs
exfiltrate_cli/src/wire/: client.rs
exfiltrate_internal/: Cargo.toml
exfiltrate_internal/src/: command.rs  commands.rs  lib.rs  rpc.rs  wire.rs
exfiltrate_internal/src/commands/: list.rs
exfiltrate_proxy/: Cargo.toml  README.md
exfiltrate_proxy/src/: main.rs  tcp.rs  websocket.rs
src/: bidirectional_proxy.rs  core.rs  http.rs  internal_proxy.rs  jrpc.rs  lib.rs  logging.rs  logwise.rs  mcp.rs  messages.rs  once_nonlock.rs  proxy_app.rs  spinlock.rs  sys.rs  transit.rs
src/core/: http.rs  jrpc.rs  mcp.rs
src/core/mcp/: logging.rs  tools.rs
src/internal_proxy/: websocket_adapter.rs
src/mcp/: latest_tools.rs  tools.rs
src/transit/: builtin_tools.rs  http.rs  log_proxy.rs  stdio.rs  transit_proxy.rs
