[package]
name = "exfiltrate"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features= ["derive"] }
serde_json = "1.0"
thiserror = "2"
logwise = { version = "0.2", optional = true }
regex = {version = "1.11", optional=true}
# for websocket accept
sha1 = { version = "0.10", optional = true}
base64 = { version = "0.22", optional = true }

[dev-dependencies]
logwise = "0.2"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-time = "1.1"
wasm_thread = "0.3"
web-sys = {version = "0.3", features = [
    "WebSocket",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType"
]}
# for spawn_local
wasm-bindgen-futures = "0.4"
# for closure
wasm-bindgen = "0.2"
continue = "0.1"
# for websocket routing
continue_stream = {path = "../continue_stream"}

[features]
transit = ["dep:regex","dep:base64", "dep:sha1"] # primarily used for logwise parsing
logwise = ["dep:logwise"]

[[bin]]
name = "proxy"
path = "src/proxy_app.rs"
required-features = ["transit"]


[[example]]
name = "tools"
path = "examples/tools.rs"
required-features = ["transit"]

[[example]]
name = "disconnected"
path = "examples/disconnected.rs"
required-features = ["transit"]

[[example]]
name = "stdio"
path = "examples/stdio.rs"
required-features = ["transit"]

[[example]]
name = "log_exfiltration"
path = "examples/log_exfiltration.rs"
required-features = ["transit","logwise"]

[[example]]
name = "internal_only"
path = "examples/internal_only.rs"
required-features = ["logwise"]



[patch.crates-io]
logwise = { path = "../logwise" }