[workspace]
members = ["exfiltrate_internal", "exfiltrate", "exfiltrate_cli", "exfiltrate_proxy"]
resolver = "3"
default-members = ["exfiltrate"]




[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
description = "An embeddable debug tool for Rust."
homepage = "https://sealedabstract.com/code/exfiltrate"
repository = "https://github.com/drewcrawford/exfiltrate"
license = "MIT OR Apache-2.0"
keywords = ["skills", "websocket", "http", "agents", "claude"]
categories = ["development-tools::debugging", "wasm"]
exclude = [".*"]
rust-version = "1.87.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
# rmp-serde is used for binary serialization (wire protocol and structured responses)
rmp-serde = "1.3"
rgb = { version = "0.8.52", features=["serde"] }
exfiltrate_internal = { version = "0.2.0" }
# exfiltrate_internal = { path = "exfiltrate_internal" }


