[package]
name = "exfiltrate"
version.workspace = true
edition.workspace = true

[features]
logwise = ["dep:logwise"]

[dependencies]
serde.workspace = true
rmp-serde.workspace = true
rgb.workspace = true
exfiltrate_internal.workspace = true
logwise = {version = "0.4.0", optional = true}
wasm_safe_mutex = "0.1.0"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { version = "0.3.82", features=["WebSocket","BinaryType","ErrorEvent","CloseEvent",
# for fetch?
    "RequestInit","RequestMode","Request","Response"
] }
wasm-bindgen-futures = "0.4.55"
continue = "0.1.1"
wasm-bindgen = "0.2.105"
continue_stream = "0.1.0"
wasm_thread = "0.3.3"

[dev-dependencies]
rgb.workspace = true

[lib]
path = "src/lib.rs"

[[example]]
name = "debug"
path = "examples/debug.rs"
