[package]
name = "exfiltrate_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command line utility for the exfiltrate crate."
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "exfiltrate_cli"
path = "src/main.rs"

[dependencies]
exfiltrate_internal.workspace = true
rmp-serde.workspace = true
rand = "0.9.2"
webp = "0.3.1"
bytemuck = "1.24.0"
