[package]
name = "exfiltrate_internal"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Internal utilities for the exfiltrate crate."
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
rmp-serde.workspace = true
rgb.workspace = true

wasm_safe_mutex = "0.1.0"






[lib]
path = "src/lib.rs"


