[package]
name = "exfiltrate_proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Proxy application for the exfiltrate crate."
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true


[[bin]]
name = "exfiltrate_proxy"
path = "src/main.rs"

[dependencies]
exfiltrate-internal.workspace = true
sha1 = "0.10.6"
base64 = "0.22.1"
